--- a/house.html
+++ b/house.html
@@ -17,3 +17,26 @@
 </script>
 </body>
 </html> 
+
+
+
+
+<!DOCTYPE html>
+<html>
+<script>
+
+ console.log(             /\           )
+ console.log(            /  \           )
+ console.log(           /    \            )
+ console.log(          /      \           )
+  console.log(        /        \          )
+ console.log(         |        |          )
+  console.log(        |  o  o  |      )
+ console.log(         |        |       )
+  console.log(        |    _   |        )
+   console.log(       |   | |  |       )
+   console.log(       |   | |  |        )
+
+</script>
+</body>
+</html> 
